--- a/basic.html
+++ b/basic.html
@@ -71,10 +71,66 @@ div{
 
 <!-- box model excersise -->
 
-<h1>Welcome Developer</h1>
+<!-- <h1>Welcome Developer</h1>
 <link rel="stylesheet" href="style.css">
 
 <p> Hi iam learning now css. Today the day is going as awsome.
     Then iam eager to learn css also. Today date is 29/02/2024.
-    
-</p>
+
+</p> -->
+
+<!-- inline excersise -->
+<!-- <div id="one">
+
+</div>
+
+<div id="two">
+
+</div>
+<link rel="stylesheet" href="style.css">
+
+<p class="one">Hi</p>
+<p class="two">Bye</p> -->
+
+<!-- <h1 class="a">
+    Home
+</h1>
+
+<h1 class="b">
+    About Us
+</h1>
+
+<h1 class="c">
+    Contact Us
+</h1>
+<link rel="stylesheet" href="style.css"> -->
+
+
+<!-- <p id="one">Navebar</p>
+<p id="two">Home</p>
+<p id="three">About Us</p>
+<p id="four">Contact</p>
+<link rel="stylesheet" href="style.css"> -->
+
+
+<!-- project -->
+<link rel="stylesheet" href="style.css">
+<div>
+<nav>
+    <h1>perfume</h1>
+    <ul>
+
+        <li>Home|</li>
+        <li>Products|</li>
+        <li>About Us|</li>
+        <li>Contact Us|</li>
+    </ul>
+</nav>
+</div>
+
+
+<div class="searchbar">
+    <input placeholder="Search">
+
+</div>
+
